ADD: register form

--- a/index.html
+++ b/index.html
@@ -285,6 +285,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-8">
+                    <div class="container">
+                        <form>
+                            <div class="mb-3">
+                                <input type="text" class="form-control" id="InputName" placeholder="Имя">
+                            </div>
+                            <div class="mb-3">
+                                <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
+                                       placeholder="Email">
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Отправить</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </main>
 
