--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -267,7 +267,7 @@
         </header>
 
         <main class="row">
-            <div class="row text-center">
+            <div class="row text-center row-cols-2">
                 <div class="col-4">
                     <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
@@ -286,22 +286,53 @@
                     </div>
                 </div>
                 <div class="col-8">
-                    <div class="container">
-                        <form>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="InputName" placeholder="Имя">
-                            </div>
-                            <div class="mb-3">
-                                <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
-                                       placeholder="Email">
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Отправить</button>
-                        </form>
+                    <form>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="InputName" placeholder="Имя">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
+                                   placeholder="Email">
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Отправить</button>
+                    </form>
+                </div>
+                <div class="col-12">
+                    <p class="h4">FAQ</p>
+                    <p class="d-inline-flex gap-1">
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#faq1" role="button"
+                           aria-expanded="false" aria-controls="faq1">
+                            Как купить?
+                        </a>
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#faq2" role="button"
+                           aria-expanded="false" aria-controls="faq2">
+                            Как доставить?
+                        </a>
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#faq3" role="button"
+                           aria-expanded="false" aria-controls="faq3">
+                            Какая гарантия?
+                        </a>
+                    </p>
+                    <div class="collapse" id="faq1">
+                        <div class="card-body">
+                            Выберите товар. Начните с поиска нужного вам товара в нашем каталоге. Вы можете
+                            использовать категории для облегчения поиска. Нажмите кнопку "Купить".
+                        </div>
+                    </div>
+                    <div class="collapse" id="faq2">
+                        <div class="card-body">
+                            Доступные способы доставки: стандартная (от 3 до 7 рабочих дней), экспресс (от 1 до 3
+                            рабочих дней) и самовывоз.
+                        </div>
+                    </div>
+                    <div class="collapse" id="faq3">
+                        <div class="card-body">
+                            Все наши товары покрываются официальной гарантией производителя.
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
-
     </div>
 
 </main>
