--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </header>
 
         <main class="row">
-            <div class="row text-center row-cols-2">
+            <div class="row text-center">
                 <div class="col-4">
                     <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
@@ -330,6 +330,54 @@
                             Все наши товары покрываются официальной гарантией производителя.
                         </div>
                     </div>
+                </div>
+                <div class="col-12">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Номер</th>
+                            <th scope="col">Название товара</th>
+                            <th scope="col">Цена за штуку</th>
+                            <th scope="col">Количество</th>
+                            <th scope="col">Итоговая сумма</th>
+                            <th scope="col">Статус заказа</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="col">1</th>
+                            <td>Товар 1</td>
+                            <td>10</td>
+                            <td>10</td>
+                            <td>100</td>
+                            <td class="table-info">Новый</td>
+                        </tr>
+                        <tr>
+                            <th scope="col">2</th>
+                            <td>Товар 2</td>
+                            <td>20</td>
+                            <td>10</td>
+                            <td>200</td>
+                            <td class="table-warning">Обработка</td>
+                        </tr>
+                        <tr>
+                            <th scope="col">3</th>
+                            <td>Товар 3</td>
+                            <td>30</td>
+                            <td>10</td>
+                            <td>300</td>
+                            <td class="table-success">Обработан</td>
+                        </tr>
+                        <tr>
+                            <th scope="col">4</th>
+                            <td>Товар 4</td>
+                            <td>40</td>
+                            <td>10</td>
+                            <td>400</td>
+                            <td class="table-danger">Отмена</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </main>
